// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiPyClientGenerator - composite types > should emit Union types for anyOf > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, TypedDict, Union

from pydantic import BaseModel, ConfigDict


class Wrap(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    value: "WrapValue"


WrapValue = Union[str, int]


class URequest(TypedDict):
    body: "Wrap"


UError = Never
"
`;

exports[`openApiPyClientGenerator - composite types > should emit Union types for oneOf > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, Union

from pydantic import BaseModel, ConfigDict


class Wrap(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    value: "WrapValue"


WrapValue = Union[str, bool]

OError = Never
"
`;

exports[`openApiPyClientGenerator - composite types > should flatten allOf inheritance into a single pydantic class > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel

from . import types_gen


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class DogApiError(ApiError):
    """Raised when \`dog\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(
        self,
        path: str,
        path_params: dict[str, Any],
        path_styles: Optional[dict[str, tuple[str, bool]]] = None,
    ) -> str:
        for key, value in path_params.items():
            style, explode = (path_styles or {}).get(key, ("simple", False))
            values = value if isinstance(value, list) else [value]
            if style == "matrix":
                # RFC 6570 path-style expansion: ;key=a,b (explode: ;key=a;key=b)
                if explode:
                    rendered = "".join(
                        ";" + key + "=" + quote(str(v), safe="") for v in values
                    )
                else:
                    rendered = (
                        ";"
                        + key
                        + "="
                        + ",".join(quote(str(v), safe="") for v in values)
                    )
            elif style == "label":
                # RFC 6570 label expansion: .a,b (explode: .a.b)
                rendered = "." + ("." if explode else ",").join(
                    quote(str(v), safe="") for v in values
                )
            else:
                rendered = quote(str(value), safe="")
            path = path.replace("{" + key + "}", rendered)
        return self._base_url + path

    def _deep_object(self, key: str, value: Any, out: dict[str, Any]) -> None:
        if isinstance(value, BaseModel):
            value = value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, dict):
            for prop, v in value.items():
                self._deep_object(f"{key}[{prop}]", v, out)
        elif value is not None:
            out[key] = value

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if (collection_formats or {}).get(key) == "deepObject":
                self._deep_object(key, value, out)
            elif isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, (list, tuple)):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def dog(
        self,
        *,
        name: str,
        breed: str,
    ) -> types_gen.Dog:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        _body_fields: dict[str, Any] = {}
        _body_fields["name"] = name
        _body_fields["breed"] = breed
        body = types_gen.Dog.model_validate(_body_fields).model_dump(
            mode="json", by_alias=True, exclude_unset=True
        )
        request_kwargs: dict[str, Any] = {"json": body}
        if not self._config.omit_content_type_header:
            header_params.setdefault("Content-Type", "application/json")
        _request_url = self._url("/dog", path_params)
        response = self._client.request(
            "POST",
            _request_url,
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return types_gen.Dog.model_validate(response.json())
        raise DogApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - composite types > should flatten allOf inheritance into a single pydantic class > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, TypedDict

from pydantic import BaseModel, ConfigDict


class Animal(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    name: str


class Dog(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    name: str
    breed: str


class DogRequest(TypedDict):
    body: "Dog"


DogError = Never
"
`;

exports[`openApiPyClientGenerator - composite types > should handle recursive schema references > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, Optional, TypedDict

from pydantic import BaseModel, ConfigDict


class Tree(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    value: int
    children: Optional[list["Tree"]] = None


class TreeRequest(TypedDict):
    body: "Tree"


TreeError = Never
"
`;
